--- a/.i3status.conf
+++ b/.i3status.conf
@@ -34,7 +34,7 @@ cpu_usage {
 }
 
 memory {
-    format = "MEM %percentage_available"
+    format = "MEM %percentage_used"
     threshold_degraded = "4G"
     threshold_critical = "1G"
 }
@@ -75,6 +75,7 @@ load {
 cpu_temperature 0 {
     format = "TMP %degreesC"
     max_threshold = 70
+    path = "/sys/devices/platform/nct6775.2592/hwmon/hwmon3/temp1_input"
 }
 
 disk "/" {
