--- a/regolith/i3/config
+++ b/regolith/i3/config
@@ -67,6 +67,30 @@ set_from_resource $ws17 i3-wm.workspace.17.name "17"
 set_from_resource $ws18 i3-wm.workspace.18.name "18"
 set_from_resource $ws19 i3-wm.workspace.19.name "19"
 
+set_from_resource $screen_left wjdp.screen_left "DisplayPort-1"
+set_from_resource $screen_right wjdp.screen_right "HDMI-A-0"
+
+# Need to refer by index https://github.com/regolith-linux/regolith-desktop/issues/84#issuecomment-520169715
+workspace 1  output $screen_left
+workspace 2  output $screen_left
+workspace 3  output $screen_left
+workspace 4  output $screen_left
+workspace 5  output $screen_left
+workspace 6  output $screen_left
+workspace 7  output $screen_left
+workspace 8  output $screen_left
+workspace 9  output $screen_left
+workspace 10 output $screen_right
+workspace 11 output $screen_right
+workspace 12 output $screen_right
+workspace 13 output $screen_right
+workspace 14 output $screen_right
+workspace 15 output $screen_right
+workspace 16 output $screen_right
+workspace 17 output $screen_right
+workspace 18 output $screen_right
+workspace 19 output $screen_right
+
 ###############################################################################
 # Launcher dialogs
 ###############################################################################
