Remove temp from i3status

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -22,15 +22,15 @@ order += "path_exists docked"
 order += "battery 0"
 order += "disk /"
 order += "cpu_usage"
-order += "cpu_temperature 0"
+# order += "cpu_temperature 0"
 order += "memory"
 order += "load"
 order += "tztime local"
 
 cpu_usage {
     format = "CPU %usage"
-    separator = false
-    separator_block_width = 6
+    # separator = false
+    # separator_block_width = 6
 }
 
 memory {
