JetBrains workspace assignment

--- a/regolith/i3/config
+++ b/regolith/i3/config
@@ -583,3 +583,11 @@ for_window [class="java-lang-Thread"] floating enable
 for_window [class="Workrave"] border none
 for_window [class="Workrave"] floating enable
 for_window [class="jetbrains-toolbox"] floating enable
+for_window [class="jetbrains-idea" title="win0"] floating enable
+
+####
+# Workspace assignment
+####
+
+assign [class="jetbrains-pycharm"] "$ws1"
+for_window [class="jetbrains-pycharm"] move to workspace "$ws1"
