--- a/regolith/i3/config
+++ b/regolith/i3/config
@@ -410,7 +410,7 @@ bindsym $mod+r mode "RESIZE"
 # HA
 ###
 
-bindsym $mod+Home exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_day &>> "$HOME/i3.log"
+bindsym $mod+Home exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_day
 bindsym $mod+Prior exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening_desk
 bindsym $mod+Next exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening
 bindsym $mod+End exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_off
