--- a/regolith/i3/config
+++ b/regolith/i3/config
@@ -55,8 +55,8 @@ set_from_resource $ws5  i3-wm.workspace.05.name "5"
 set_from_resource $ws6  i3-wm.workspace.06.name "6"
 set_from_resource $ws7  i3-wm.workspace.07.name "7"
 set_from_resource $ws8  i3-wm.workspace.08.name "8"
-set_from_resource $ws9  i3-wm.workspace.09.name "9"
-set_from_resource $ws10 i3-wm.workspace.10.name "10"
+#set_from_resource $ws9  i3-wm.workspace.09.name "9"
+#set_from_resource $ws10 i3-wm.workspace.10.name "10"
 set_from_resource $ws11 i3-wm.workspace.11.name "11"
 set_from_resource $ws12 i3-wm.workspace.12.name "12"
 set_from_resource $ws13 i3-wm.workspace.13.name "13"
@@ -65,7 +65,7 @@ set_from_resource $ws15 i3-wm.workspace.15.name "15"
 set_from_resource $ws16 i3-wm.workspace.16.name "16"
 set_from_resource $ws17 i3-wm.workspace.17.name "17"
 set_from_resource $ws18 i3-wm.workspace.18.name "18"
-set_from_resource $ws19 i3-wm.workspace.19.name "19"
+#set_from_resource $ws19 i3-wm.workspace.19.name "19"
 
 set_from_resource $screen_left wjdp.screen_left "DisplayPort-1"
 set_from_resource $screen_right wjdp.screen_right "HDMI-A-0"
@@ -79,8 +79,8 @@ workspace "$ws5"  output $screen_left
 workspace "$ws6"  output $screen_left
 workspace "$ws7"  output $screen_left
 workspace "$ws8"  output $screen_left
-workspace "$ws9"  output $screen_left
-workspace "$ws10" output $screen_right
+#workspace "$ws9"  output $screen_left
+#workspace "$ws10" output $screen_right
 workspace "$ws11" output $screen_right
 workspace "$ws12" output $screen_right
 workspace "$ws13" output $screen_right
@@ -89,7 +89,7 @@ workspace "$ws15" output $screen_right
 workspace "$ws16" output $screen_right
 workspace "$ws17" output $screen_right
 workspace "$ws18" output $screen_right
-workspace "$ws19" output $screen_right
+#workspace "$ws19" output $screen_right
 
 ###############################################################################
 # Launcher dialogs
@@ -150,8 +150,8 @@ bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
 bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+#bindsym $mod+9 workspace number $ws9
+#bindsym $mod+0 workspace number $ws10
 ## Navigate // Workspace 11 - 19 // <◇><Ctrl> 0..9 ##
 bindsym $mod+Ctrl+1 workspace number $ws11
 bindsym $mod+Ctrl+2 workspace number $ws12
@@ -237,8 +237,8 @@ bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+#bindsym $mod+Shift+9 move container to workspace number $ws9
+#bindsym $mod+Shift+0 move container to workspace number $ws10
 ## Modify // Move Window to Workspace 11 - 19// <◇><Ctrl><Shift> 0..9 ##
 bindsym $mod+Shift+Ctrl+1 move container to workspace number $ws11
 bindsym $mod+Shift+Ctrl+2 move container to workspace number $ws12
@@ -248,7 +248,7 @@ bindsym $mod+Shift+Ctrl+5 move container to workspace number $ws15
 bindsym $mod+Shift+Ctrl+6 move container to workspace number $ws16
 bindsym $mod+Shift+Ctrl+7 move container to workspace number $ws17
 bindsym $mod+Shift+Ctrl+8 move container to workspace number $ws18
-bindsym $mod+Shift+Ctrl+9 move container to workspace number $ws19
+#bindsym $mod+Shift+Ctrl+9 move container to workspace number $ws19
 
 # move focused container to workspace, move to workspace
 ## Modify // Carry Window to Workspace 1 - 10// <◇><Alt> 0..9 ##
@@ -260,8 +260,8 @@ bindsym $mod+$alt+5 move container to workspace number $ws5; workspace number $w
 bindsym $mod+$alt+6 move container to workspace number $ws6; workspace number $ws6
 bindsym $mod+$alt+7 move container to workspace number $ws7; workspace number $ws7
 bindsym $mod+$alt+8 move container to workspace number $ws8; workspace number $ws8
-bindsym $mod+$alt+9 move container to workspace number $ws9; workspace number $ws9
-bindsym $mod+$alt+0 move container to workspace number $ws10; workspace number $ws10
+#bindsym $mod+$alt+9 move container to workspace number $ws9; workspace number $ws9
+#bindsym $mod+$alt+0 move container to workspace number $ws10; workspace number $ws10
 ## Modify // Carry Window to Workspace 11 - 19 // <◇><Alt><Ctrl> 0..9 ##
 bindsym $mod+$alt+Ctrl+1 move container to workspace number $ws11; workspace number $ws11
 bindsym $mod+$alt+Ctrl+2 move container to workspace number $ws12; workspace number $ws12
@@ -271,7 +271,7 @@ bindsym $mod+$alt+Ctrl+5 move container to workspace number $ws15; workspace num
 bindsym $mod+$alt+Ctrl+6 move container to workspace number $ws16; workspace number $ws16
 bindsym $mod+$alt+Ctrl+7 move container to workspace number $ws17; workspace number $ws17
 bindsym $mod+$alt+Ctrl+8 move container to workspace number $ws18; workspace number $ws18
-bindsym $mod+$alt+Ctrl+9 move container to workspace number $ws19; workspace number $ws19
+#bindsym $mod+$alt+Ctrl+9 move container to workspace number $ws19; workspace number $ws19
 
 ## Modify // Move To Named Workspace // <◇><Shift> _ ##
 bindsym $mod+Shift+minus exec i3-input -f 'pango:Inconsolata 20' -F 'move container to workspace %s' -P 'MVTO: '
