--- a/local.yml
+++ b/local.yml
@@ -1,4 +1,5 @@
 - name: Set up local machine
   hosts: "{{ host }}"
   roles:
+    - { role: linux, tags: ["linux"] }
     - { role: git, tags: ["git"] }
