--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -5,3 +5,10 @@
       vars:
         inotify_max_user_watches: 100000
   become: yes
+
+- name: Install apt packages
+  become: yes
+  apt: name={{ apt_packages }} state=present
+
+
+
