Add Google Chrome install role

--- a/local.yml
+++ b/local.yml
@@ -4,3 +4,4 @@
     - { role: linux, tags: ["linux"] }
     - { role: gnome, tags: ["gnome"] }
     - { role: git, tags: ["git"] }
+    - { role: google-chrome, tags: ["google-chrome"] }
