--- a/local.yml
+++ b/local.yml
@@ -3,5 +3,6 @@
   roles:
     - { role: linux, tags: ["linux"] }
     - { role: gnome, tags: ["gnome"] }
+    - { role: fonts, tags: ["fonts"] }
     - { role: git, tags: ["git"] }
     - { role: google-chrome, tags: ["google-chrome"] }
