--- a/roles/regolith/tasks/main.yml
+++ b/roles/regolith/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: Ensure regolith dir exists
-  file: "path={{ dotfiles_user_home }}/.config/regolith state=directory"
-- name: Ensure i3 dir exists
-  file: "path={{ dotfiles_user_home }}/.config/regolith/i3 state=directory"
-- name: Ensure compton dir exists
-  file: "path={{ dotfiles_user_home }}/.config/regolith/compton state=directory"
+- name: Ensure directories exist
+  file: "path={{ item }} state=directory"
+  loop:
+    - "{{ dotfiles_user_home }}/.config/regolith/i3"
+    - "{{ dotfiles_user_home }}/.config/regolith/compton"
+    - "{{ dotfiles_user_home }}/.config/i3status"
 
 - name: Link i3 config
   file:
@@ -26,8 +26,6 @@
     mode: 0664
   register: xresources
 
-- name: Ensure i3status dir exists
-  file: "path={{ dotfiles_user_home }}/.config/i3status state=directory"
 - name: Update i3status
   template:
     src: "i3status.j2"
