--- a/roles/gnome/tasks/nemo.yml
+++ b/roles/gnome/tasks/nemo.yml
@@ -1,25 +1,25 @@
-- name: Set dconf variables for Nemo
+- name: Setup nemo preferences
   loop:
-    - key: "/org/nemo/preferences/default-folder-viewer"
+    - key: "default-folder-viewer"
       value: "'list-view'"
-    - key: "/org/nemo/preferences/show-computer-icon-toolbar"
+    - key: "show-computer-icon-toolbar"
       value: "true"
-    - key: "/org/nemo/preferences/show-full-path-titles"
+    - key: "show-full-path-titles"
       value: "false"
-    - key: "/org/nemo/preferences/show-hidden-files"
+    - key: "show-hidden-files"
       value: "true"
-    - key: "/org/nemo/preferences/show-home-icon-toolbar"
+    - key: "show-home-icon-toolbar"
       value: "true"
-    - key: "/org/nemo/preferences/show-location-entry"
+    - key: "show-location-entry"
       value: "true"
-    - key: "/org/nemo/preferences/show-open-in-terminal-toolbar"
+    - key: "show-open-in-terminal-toolbar"
       value: "true"
-    - key: "/org/nemo/preferences/show-show-thumbnails-toolbar"
+    - key: "show-show-thumbnails-toolbar"
       value: "true"
-    - key: "/org/nemo/preferences/size-prefixes="
+    - key: "size-prefixes="
       value: "'base-10'"
-    - key: "/org/nemo/preferences/date-format"
+    - key: "date-format"
       value: "'iso'"
   dconf:
-    key: "{{ item.key }}"
+    key: "{{nemo_dconf_path}}/{{ item.key }}"
     value: "{{ item.value }}"
