--- a/roles/regolith/tasks/main.yml
+++ b/roles/regolith/tasks/main.yml
@@ -19,20 +19,22 @@
     state: link
     force: yes
 
+- name: Link dunst config
+  file:
+    src: "{{ dotfiles_home }}/roles/regolith/files/dunstrc"
+    dest: "{{ dotfiles_user_home }}/.config/dunst/dunstrc"
+    state: link
+    force: yes
 - name: Update Xresources
   template:
     src: "Xresources.j2"
     dest: "{{ dotfiles_user_home }}/.config/regolith/Xresources"
     mode: 0664
-  register: xresources
+  notify: Restart i3
 
 - name: Update i3status
   template:
     src: "i3status.j2"
     dest: "{{ dotfiles_user_home }}/.config/i3status/config"
     mode: 0664
-  register: i3status
-
-- name: Reload & restart i3
-  when: xresources.changed or i3status.changed
-  command: "regolith-look refresh"
+  notify: Restart i3
