--- a/roles/google-chrome/tasks/main.yml
+++ b/roles/google-chrome/tasks/main.yml
@@ -5,7 +5,9 @@
   ignore_errors: True
 
 - name: Add Google Chrome key
-  shell: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+  args:
+    executable: /usr/bin/bash
+  shell: "set -o pipefail && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -"
   when: not google_apt_result.stat.exists
   become: yes
 
