--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -58,4 +58,8 @@ apt_packages:
   - xdotool
   - zbar-tools
 
+deb_packages:
+  - pkg: bat
+    url: https://github.com/sharkdp/bat/releases/download/v0.18.3/bat_0.18.3_amd64.deb
+
 has_wireless: no
