--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -10,5 +10,6 @@
   become: yes
   apt: name={{ apt_packages }} state=present
 
-
-
+- name: Install debs
+  loop: "{{ deb_packages }}"
+  include_tasks: deb.yml
