Move apt operations into new apt role from linux

--- a/local.yml
+++ b/local.yml
@@ -2,6 +2,7 @@
   hosts: "{{ host }}"
   roles:
     - { role: linux, tags: ["linux"] }
+    - { role: apt, tags: ["apt"] }
     - { role: dotfiles, tags: ["dotfiles"] }
     - { role: fish, tags: ["fish"] }
     - { role: fonts, tags: ["fonts"] }
