--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,10 +5,14 @@ user: will
 full_name: Will Pimblett
 git_signing_key: null
 
+apt_repos:
+  - name: tailscale
+    repo: deb https://pkgs.tailscale.com/stable/ubuntu focal main
+    key: https://pkgs.tailscale.com/stable/ubuntu/focal.gpg
+
 apt_packages:
   - arandr
   - audacity
-  - awk
   - baobab
   - build-essential
   - chromium-browser
@@ -47,6 +51,7 @@ apt_packages:
   - software-properties-common
   - sshfs
   - sudo
+  - tailscale
   - tmux
   - units
   - unrar
