--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -47,6 +47,7 @@
   loop:
     - "~/bin"
     - "~/dotfiles/bin"
+    - "~/.local/bin"
     - "node_modules/bin"
   args:
     executable: /usr/bin/bash
