--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ bin/barista filter=lfs diff=lfs merge=lfs -text
 bin/kindlegen filter=lfs diff=lfs merge=lfs -text
 roles/fonts/files/fonts/** filter=lfs diff=lfs merge=lfs -text
 wallpapers/** filter=lfs diff=lfs merge=lfs -text
+bin/git-absorb filter=lfs diff=lfs merge=lfs -text
