Remove regolith-rofication

--- a/roles/regolith/tasks/main.yml
+++ b/roles/regolith/tasks/main.yml
@@ -6,6 +6,14 @@
       - dunst
     state: present
 
+- name: Remove regolith-rofication
+  become: yes
+  apt:
+    pkg:
+      - regolith-rofication
+    state: absent
+    purge: yes
+
 - name: Ensure directories exist
   file:
     path: "{{ item }}"
