--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -1,10 +1,9 @@
-- block:
-    - name: Set inotify limit
-      include_role:
-        name: gantsign.inotify
-      vars:
-        inotify_max_user_watches: 100000
+- name: Set inotify limit
   become: yes
+  sysctl:
+    name: fs.inotify.max_user_watches
+    value: 524288
+    state: present
 
 - name: Set default editor to vim
   become: yes
