--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,6 +5,10 @@ user: will
 full_name: Will Pimblett
 git_signing_key: null
 
+# Defaults
+has_wireless: no
+
+# Packages
 apt_repos:
   - name: tailscale
     repo: deb https://pkgs.tailscale.com/stable/ubuntu focal main
@@ -69,5 +73,5 @@ deb_packages:
     url: https://github.com/sharkdp/bat/releases/download/v0.18.3/bat_0.18.3_amd64.deb
   - pkg: dive
     url: https://github.com/wagoodman/dive/releases/download/v0.10.0/dive_0.10.0_linux_amd64.deb
-
-has_wireless: no
+  - pkg: obsidian
+    url: https://github.com/obsidianmd/obsidian-releases/releases/download/v0.12.15/obsidian_0.12.15_amd64.deb
