Add ~/.poetry/bin to fish path

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -80,7 +80,7 @@ fish_paths:
   - "~/bin"
   - "~/dotfiles/bin"
   - "~/.local/bin"
-  - "node_modules/bin"
+  - "~/.poetry/bin"
 
 fish_abbr:
   - word: dc
