Add pwgen and pass-extension-otp

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -45,9 +45,11 @@ apt_packages:
   - nemo
   - p7zip-full
   - pass
+  - pass-extension-otp
   - pasystray
   - pavucontrol
   - powertop
+  - pwgen
   - ruby
   - ruby-dev
   - screen
