--- a/local.yml
+++ b/local.yml
@@ -9,6 +9,7 @@
     - { role: gnome, tags: ["gnome"] }
     - { role: regolith, tags: ["regolith"] }
     - { role: git, tags: ["git"] }
+    - { role: python, tags: ["python"] }
     - { role: node, tags: ["node"] }
     - { role: vim, tags: ["vim"] }
     - { role: sublime, tags: ["sublime"] }
