--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -13,6 +13,9 @@ apt_repos:
   - name: tailscale
     repo: deb https://pkgs.tailscale.com/stable/ubuntu focal main
     key: https://pkgs.tailscale.com/stable/ubuntu/focal.gpg
+  - name: spotify
+    repo: deb http://repository.spotify.com stable non-free
+    key: https://download.spotify.com/debian/pubkey_0D811D58.gpg
 
 apt_packages:
   - arandr
@@ -54,6 +57,7 @@ apt_packages:
   - screen
   - screenruler
   - software-properties-common
+  - spotify-client
   - sshfs
   - sudo
   - tailscale
