Migrate docker install to role

--- a/local.yml
+++ b/local.yml
@@ -16,3 +16,4 @@
     - { role: google-chrome, tags: ["google-chrome"] }
     - { role: jetbrains, tags: ["jetbrains"] }
     - { role: zsa, tags: ["zsa"] }
+    - { role: docker, tags: ["docker"] }
